src/BlasSharp.AppleAccelerate/NativeMethods.CBLAS.g.cs

// <auto-generated>
// This code is generated by csbindgen.
// DON'T CHANGE THIS DIRECTLY.
// </auto-generated>
#pragma warning disable CS8500
#pragma warning disable CS8981
using System;
using System.Runtime.InteropServices;


namespace BlasSharp.AppleAccelerate
{
    public static unsafe partial class NativeMethods
    {
        const string __DllName = "/System/Library/Frameworks/Accelerate.framework/Accelerate";



        [DllImport(__DllName, EntryPoint = "cblas_errprn", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern int cblas_errprn(int __ierr, int __info, byte* __form);

        [DllImport(__DllName, EntryPoint = "cblas_xerbla", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern void cblas_xerbla(int __p, byte* __rout, byte* __form);

        [DllImport(__DllName, EntryPoint = "cblas_sdsdot", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern float cblas_sdsdot(int __N, float __alpha, float* __X, int __incX, float* __Y, int __incY);

        [DllImport(__DllName, EntryPoint = "cblas_dsdot", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern double cblas_dsdot(int __N, float* __X, int __incX, float* __Y, int __incY);

        [DllImport(__DllName, EntryPoint = "cblas_sdot", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern float cblas_sdot(int __N, float* __X, int __incX, float* __Y, int __incY);

        [DllImport(__DllName, EntryPoint = "cblas_ddot", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern double cblas_ddot(int __N, double* __X, int __incX, double* __Y, int __incY);

        [DllImport(__DllName, EntryPoint = "cblas_cdotu_sub", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern void cblas_cdotu_sub(int __N, void* __X, int __incX, void* __Y, int __incY, void* __dotu);

        [DllImport(__DllName, EntryPoint = "cblas_cdotc_sub", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern void cblas_cdotc_sub(int __N, void* __X, int __incX, void* __Y, int __incY, void* __dotc);

        [DllImport(__DllName, EntryPoint = "cblas_zdotu_sub", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern void cblas_zdotu_sub(int __N, void* __X, int __incX, void* __Y, int __incY, void* __dotu);

        [DllImport(__DllName, EntryPoint = "cblas_zdotc_sub", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern void cblas_zdotc_sub(int __N, void* __X, int __incX, void* __Y, int __incY, void* __dotc);

        [DllImport(__DllName, EntryPoint = "cblas_snrm2", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern float cblas_snrm2(int __N, float* __X, int __incX);

        [DllImport(__DllName, EntryPoint = "cblas_sasum", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern float cblas_sasum(int __N, float* __X, int __incX);

        [DllImport(__DllName, EntryPoint = "cblas_dnrm2", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern double cblas_dnrm2(int __N, double* __X, int __incX);

        [DllImport(__DllName, EntryPoint = "cblas_dasum", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern double cblas_dasum(int __N, double* __X, int __incX);

        [DllImport(__DllName, EntryPoint = "cblas_scnrm2", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern float cblas_scnrm2(int __N, void* __X, int __incX);

        [DllImport(__DllName, EntryPoint = "cblas_scasum", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern float cblas_scasum(int __N, void* __X, int __incX);

        [DllImport(__DllName, EntryPoint = "cblas_dznrm2", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern double cblas_dznrm2(int __N, void* __X, int __incX);

        [DllImport(__DllName, EntryPoint = "cblas_dzasum", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern double cblas_dzasum(int __N, void* __X, int __incX);

        [DllImport(__DllName, EntryPoint = "cblas_isamax", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern int cblas_isamax(int __N, float* __X, int __incX);

        [DllImport(__DllName, EntryPoint = "cblas_idamax", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern int cblas_idamax(int __N, double* __X, int __incX);

        [DllImport(__DllName, EntryPoint = "cblas_icamax", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern int cblas_icamax(int __N, void* __X, int __incX);

        [DllImport(__DllName, EntryPoint = "cblas_izamax", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern int cblas_izamax(int __N, void* __X, int __incX);

        [DllImport(__DllName, EntryPoint = "cblas_sswap", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern void cblas_sswap(int __N, float* __X, int __incX, float* __Y, int __incY);

        [DllImport(__DllName, EntryPoint = "cblas_scopy", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern void cblas_scopy(int __N, float* __X, int __incX, float* __Y, int __incY);

        [DllImport(__DllName, EntryPoint = "cblas_saxpy", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern void cblas_saxpy(int __N, float __alpha, float* __X, int __incX, float* __Y, int __incY);

        [DllImport(__DllName, EntryPoint = "cblas_dswap", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern void cblas_dswap(int __N, double* __X, int __incX, double* __Y, int __incY);

        [DllImport(__DllName, EntryPoint = "cblas_dcopy", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern void cblas_dcopy(int __N, double* __X, int __incX, double* __Y, int __incY);

        [DllImport(__DllName, EntryPoint = "cblas_daxpy", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern void cblas_daxpy(int __N, double __alpha, double* __X, int __incX, double* __Y, int __incY);

        [DllImport(__DllName, EntryPoint = "cblas_cswap", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern void cblas_cswap(int __N, void* __X, int __incX, void* __Y, int __incY);

        [DllImport(__DllName, EntryPoint = "cblas_ccopy", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern void cblas_ccopy(int __N, void* __X, int __incX, void* __Y, int __incY);

        [DllImport(__DllName, EntryPoint = "cblas_caxpy", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern void cblas_caxpy(int __N, void* __alpha, void* __X, int __incX, void* __Y, int __incY);

        [DllImport(__DllName, EntryPoint = "cblas_zswap", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern void cblas_zswap(int __N, void* __X, int __incX, void* __Y, int __incY);

        [DllImport(__DllName, EntryPoint = "cblas_zcopy", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern void cblas_zcopy(int __N, void* __X, int __incX, void* __Y, int __incY);

        [DllImport(__DllName, EntryPoint = "cblas_zaxpy", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern void cblas_zaxpy(int __N, void* __alpha, void* __X, int __incX, void* __Y, int __incY);

        [DllImport(__DllName, EntryPoint = "cblas_srotg", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern void cblas_srotg(float* __a, float* __b, float* __c, float* __s);

        [DllImport(__DllName, EntryPoint = "cblas_srotmg", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern void cblas_srotmg(float* __d1, float* __d2, float* __b1, float __b2, float* __P);

        [DllImport(__DllName, EntryPoint = "cblas_srot", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern void cblas_srot(int __N, float* __X, int __incX, float* __Y, int __incY, float __c, float __s);

        [DllImport(__DllName, EntryPoint = "cblas_srotm", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern void cblas_srotm(int __N, float* __X, int __incX, float* __Y, int __incY, float* __P);

        [DllImport(__DllName, EntryPoint = "cblas_drotg", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern void cblas_drotg(double* __a, double* __b, double* __c, double* __s);

        [DllImport(__DllName, EntryPoint = "cblas_drotmg", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern void cblas_drotmg(double* __d1, double* __d2, double* __b1, double __b2, double* __P);

        [DllImport(__DllName, EntryPoint = "cblas_drot", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern void cblas_drot(int __N, double* __X, int __incX, double* __Y, int __incY, double __c, double __s);

        [DllImport(__DllName, EntryPoint = "cblas_drotm", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern void cblas_drotm(int __N, double* __X, int __incX, double* __Y, int __incY, double* __P);

        [DllImport(__DllName, EntryPoint = "cblas_sscal", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern void cblas_sscal(int __N, float __alpha, float* __X, int __incX);

        [DllImport(__DllName, EntryPoint = "cblas_dscal", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern void cblas_dscal(int __N, double __alpha, double* __X, int __incX);

        [DllImport(__DllName, EntryPoint = "cblas_cscal", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern void cblas_cscal(int __N, void* __alpha, void* __X, int __incX);

        [DllImport(__DllName, EntryPoint = "cblas_zscal", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern void cblas_zscal(int __N, void* __alpha, void* __X, int __incX);

        [DllImport(__DllName, EntryPoint = "cblas_csscal", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern void cblas_csscal(int __N, float __alpha, void* __X, int __incX);

        [DllImport(__DllName, EntryPoint = "cblas_zdscal", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern void cblas_zdscal(int __N, double __alpha, void* __X, int __incX);

        [DllImport(__DllName, EntryPoint = "cblas_crotg", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern void cblas_crotg(void* __a, void* __b, void* __c, void* __s);

        [DllImport(__DllName, EntryPoint = "cblas_zrotg", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern void cblas_zrotg(void* __a, void* __b, void* __c, void* __s);
